keycloak/openshift-app/postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    net.pflaeging.deployment: system-keycloak-postgresql
  name: system-keycloak-postgresql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      net.pflaeging.deployment: system-keycloak-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        net.pflaeging.deployment: system-keycloak-postgresql
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: system-keycloak
        image: reg.pflaeging.net/stickiebox/postgresql:latest
        imagePullPolicy: Always
        name: keycloak-db
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: system-keycloak-pg-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: system-keycloak-pg-data
        persistentVolumeClaim:
          claimName: system-keycloak-pg-data
status: {}
