keycloak/openshift-app/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    net.pflaeging.service: keycloak
    net.pflaeging.instance: system-keycloak
  name: system-keycloak-keycloak
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    net.pflaeging.deployment: system-keycloak-keycloak
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
